--- a/Page3.html
+++ b/Page3.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>A Random Business - Products</title>
+        <link href="https://unpkg.com/tailwindcss@2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <h1>Products & Services</h1>
