--- a/Page2.html
+++ b/Page2.html
@@ -5,20 +5,45 @@
         <title>A Random Business - About Us</title>
         <link href="https://unpkg.com/tailwindcss@2/dist/tailwind.min.css" rel="stylesheet" type="text/css">
     </head>
-    <body>
-        <h1>About Us</h1>
-        <p>We are an American multinational corporation that designs, manufactures, and distributes engines, filtration, and power generation products.</p>
 
-        <h2>Locations</h2>
-        <p>
-        <ul>
-            <Li>USA</Li>
-            <Li>Canada</Li> 
-            <li>United Kingdom</li> 
-            <li>Mexico</li>
-        </ul>
-        <p>
-        <img src="https://geology.com/world/world-map.gif">
+    <body>
+        <h1 class="text-center m-8 capitalize text-blue-800 font-bold text-5xl">About Us</h1>
         
+        <div class="mt:p-20 p-4">  
+
+            <div class="flex">
+                <h1 class="text-xl font-bold text-center">
+                    <a href="index.html">
+                      <span class="text-blue-800">We are an American multinational corporation that designs, manufactures, and distributes engines, filtration, and power generation products.</span>
+                    </a>
+                </h1>
+            </div>
+
+            <div class="px-20 md:flex items-center bg-blue-50">
+                <div class="md:w-1/2 m-auto md:p-20">
+                  <img class="rounded-xl" src="https://geology.com/world/world-map.gif">
+                </div>
+                <div class="md:w-1/2 p-20 space-y-10">
+                  <h2 class="font-bold text-xl">Locations:</h2>
+                  <p>USA, Canada, Mexico, UK.</p>
+                  <h2 class="font-bold text-xl">To find out more <a href="https://www.cummins.com/new-power/"><span class="text-purple-800 font-bold">Click Here</span></a></h2>
+                </div>
+            </div>      
+
+        <div class="m-8">
+            <h1 class="text-3xl font-bold text-center">Sign up to learn more</h1>
+
+            <form netlify class="mx-auto mt-8 w-64">
+            <label class="block mt-4 font-bold" for="name">What is your name?</label>
+            <input class="p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500 focus:border-purple-500" type="text" id="name" name="name">
+
+            <label class="block mt-4 font-bold" for="favorite-color">What is your favorite color?</label>
+            <input class="p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500 focus:border-purple-500" type="text" id="favorite-color" name="favoriteColor">
+
+            <button class="block mt-4 text-white bg-purple-500 rounded px-4 py-2">Submit form!</button>
+            </form>
+        </div>
+
+        <p> <a href="https://coronavirus.jhu.edu/map.html">John Hopkins Covid Dashboard</a> </p>
     </body>
 </html>
