--- a/Page2.html
+++ b/Page2.html
@@ -26,7 +26,7 @@
                 <div class="md:w-1/2 p-20 space-y-10">
                   <h2 class="font-bold text-xl">Locations:</h2>
                   <p>USA, Canada, Mexico, UK.</p>
-                  <h2 class="font-bold text-xl">To find out more <a href="https://www.cummins.com/new-power/"><span class="text-purple-800 font-bold">Click Here</span></a></h2>
+                  <h2 class="font-bold text-xl">To know more about our Products <a href="Page3.html"><span class="text-purple-800 font-bold">Click Here</span></a></h2>
                 </div>
             </div>      
 
@@ -37,7 +37,7 @@
             <label class="block mt-4 font-bold" for="name">What is your name?</label>
             <input class="p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500 focus:border-purple-500" type="text" id="name" name="name">
 
-            <label class="block mt-4 font-bold" for="favorite-color">What is your favorite color?</label>
+            <label class="block mt-4 font-bold" for="favorite-color">What product do you want to know more about?</label>
             <input class="p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500 focus:border-purple-500" type="text" id="favorite-color" name="favoriteColor">
 
             <button class="block mt-4 text-white bg-purple-500 rounded px-4 py-2">Submit form!</button>
