--- a/Page2.html
+++ b/Page2.html
@@ -34,6 +34,7 @@
             <h1 class="text-3xl font-bold text-center">Sign up to learn more</h1>
 
             <form netlify class="mx-auto mt-8 w-64">
+                <span class="bg-orange-100 text-red-400 font-mono p-1">netlify</span>
             <label class="block mt-4 font-bold" for="name">What is your name?</label>
             <input class="p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500 focus:border-purple-500" type="text" id="name" name="name">
 
